# muds-hackathon-2026-7-11

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  biome.json  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0cd69d361388_create_initial_schema.py  171bf2f71d97_seminar_member_by_recruitment_term.py  3df2e9d0405f_create_initial_schema.py  496c24efe3d1_add_seminar_joint_groups.py  55ad85bff0a6_drop_unique_constraint_on_recruitment_.py  714ce109f293_replace_is_recruiting_with_target_grades.py  7dc6130962c8_add_research_tags.py  9f93b87e3175_add_photo_url_to_users.py  b4ca663e930a_add_asker_notification_thread_tracking_.py  bbddcd18973e_add_research_title_to_users.py  d72867c83af0_add_seminar_knowledge_and_chat_logs.py
apps/api/src/api/: auth.py  config.py  consult_client.py  db.py  ensure_recruitment_term.py  import_seminar_docs.py  import_seminar_knowledge.py  import_seminar_members.py  import_seminars.py  import_users.py  link_slack_user.py  main.py  match_client.py  recruitment_terms.py  schemas.py  seed.py  services.py  slack_client.py
apps/api/src/api/models/: __init__.py  application.py  chat_log.py  match_evaluation.py  mixins.py  notification.py  question.py  recruitment.py  research_tag.py  seminar.py  user.py
apps/api/src/api/routers/: admin.py  answers.py  applications.py  assignments.py  consult.py  match.py  me.py  questions.py  recruitment.py  research_tags.py  seminars.py  teacher.py  users.py  users_import.py
apps/api/tests/: conftest.py  test_admin_master_api.py  test_answer_notification.py  test_answer_submission.py  test_applications_api.py  test_assignments_import_api.py  test_auth_api.py  test_consult_api.py  test_cors.py  test_import_seminar_knowledge.py  test_import_seminar_members.py  test_import_users.py  test_match_api.py  test_matches_api.py  test_me_api.py  test_models.py  test_questions_api.py  test_reason_matches_api.py  test_recruitment_admin_api.py  test_recruitment_terms.py  test_seminar_detail_api.py  test_seminar_stats_api.py  test_seminars_list_api.py  test_services.py  test_smoke.py  test_teacher_api.py  test_users_api.py  test_users_import_api.py
data/: README.md
docs/: authentication.md  deployment.md  requirements.md
scripts/: setup-auth.sh  test-backup-restore.sh
services/slack-bot/: Dockerfile  pyproject.toml
services/slack-bot/src/slack_bot/: __init__.py  api_client.py  app.py
services/slack-bot/tests/: test_app.py  test_smoke.py
(+121 files in other folders)
