[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tacho-bana", email = "s2322087@stu.musashino-u.ac.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "alembic>=1.18.5",
    "anthropic>=0.115.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "slack-bolt>=1.29.0",
    "sqlalchemy[asyncio]>=2.0.51",
    # listed directly (sentence-transformers only needs it transitively) so the
    # tool.uv.sources override below actually applies and pulls the CPU wheel on linux
    "torch>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
warn_return_any = true
check_untyped_defs = true

# python-jose は型スタブ(py.typed)を同梱していないため、mypyのuntyped-import
# エラーを避けるべく個別に無視する。
[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
